# lovi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  condition.cpp  condition.h  conditions.cpp  conditions.h  config.cpp  config.h  equalcondition.cpp  equalcondition.h  filelineprovider.cpp  filelineprovider.h  filewatcher.cpp  filewatcher.h  highlight.cpp  highlight.h  lineprovider.cpp  lineprovider.h  logformat.cpp  logformat.h  logformatdialog.cpp  logformatdialog.h  logformatdialog.ui  logformatloader.cpp  logformatloader.h  logmodel.cpp  logmodel.h  main.cpp  mainwindow.cpp  mainwindow.h
.github/workflows/: main.yml
ci/: apply_codingstyle  build-app  install-dependencies
ci/lib/: common-dependencies.sh  common.sh  install-linux-dependencies.sh  install-windows-dependencies.sh  linux-dependencies.sh  windows-dependencies.sh
ci/lib/cmake/: CMakeLists.txt
src/: CMakeLists.txt  Color.cpp  ConditionIO.cpp  Config.h  Highlight.cpp  Highlight.h  HighlightWidget.cpp  HighlightWidget.h  LogFormat.cpp  LogFormatDialog.ui  LogFormatStore.cpp  LogModel.cpp  MainController.h  MainWindow.cpp  StdinLineProvider.cpp  color.cpp  colorwidget.cpp  colorwidget.h  conditionio.cpp  conditionio.h  conditions.cpp  config.cpp  config.h  filelineprovider.cpp  filelineprovider.h  filewatcher.cpp  filewatcher.h  highlight.cpp  highlight.h  highlightmodel.cpp  highlightmodel.h  highlightwidget.cpp  highlightwidget.h  highlightwidget.ui  lineprovider.cpp  lineprovider.h  logformat.cpp  logformat.h  logformatdialog.cpp  logformatdialog.h  (+15 more)
src/core/: BaseMainController.yaml  Color.cpp  Color.h  ConditionIO.cpp  ConditionIO.h  Conditions.cpp  Conditions.h  Config.cpp  Config.h  FileLineProvider.cpp  FileLineProvider.h  FileWatcher.cpp  Filter.cpp  Filter.h  FilterModel.cpp  FilterModel.h  FilterProxyModel.cpp  FilterProxyModel.h  Highlight.cpp  Highlight.h  HighlightModel.cpp  HighlightModel.h  JsonSettings.cpp  JsonSettings.h  LineProvider.cpp  LineProvider.h  LogFormat.cpp  LogFormat.h  LogFormatIO.cpp  LogFormatIO.h  LogFormatModel.cpp  LogFormatModel.h  LogFormatStore.cpp  LogFormatStore.h  LogModel.cpp  LogModel.h  MainController.cpp  MainController.h  Searcher.cpp  Searcher.h  (+3 more)
src/translations/: lovi_en.ts  lovi_nl.ts
src/ui/: ColorUtils.cpp  ColorUtils.h  ColorWidget.cpp  ColorWidget.h  ConditionLineEdit.cpp  ConditionLineEdit.h  ConditionLineEditChecker.cpp  ConditionLineEditChecker.h  HighlightWidget.cpp  HighlightWidget.h  HighlightWidget.ui  ItemDelegate.cpp  ItemDelegate.h  LineEditChecker.cpp  LineEditChecker.h  LogFormatDialog.cpp  LogFormatDialog.h  LogFormatDialog.ui  LogFormatWidget.cpp  LogFormatWidget.h  LogFormatWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Palette.cpp  Palette.h  SearchBar.cpp  SearchBar.h  SearchBar.ui  ThinPlainTextEdit.cpp  ThinPlainTextEdit.h  WidgetFloater.cpp  WidgetFloater.h  WidgetUtils.cpp  WidgetUtils.h  lovi.qrc  main.cpp  palette.gpl
src/ui/icons/: lovi.desktop
tests/: CMakeLists.txt  Catch2QtUtils.cpp  Catch2QtUtils.h  ColorTableGen.cpp  ConditionIOTest.cpp  FileLineProviderTest.cpp  FileWatcherTest.cpp  JsonSettingsTest.cpp  LogFormatIOTest.cpp  LogFormatStoreTest.cpp  LogFormatTest.cpp  SearcherTest.cpp  TestUtils.cpp  TestUtils.h  conditioniotest.cpp  filewatchertest.cpp  logformatiotest-load.json  logformatiotest.cpp  testconfig.h.in  tests.cpp  testutils.cpp
